# Healthtech-Consultations-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  deps.py  error_handlers.py
app/api/routes/: __init__.py  consultations.py  health.py
app/core/: __init__.py  config.py  constants.py  errors.py
app/models/: __init__.py  common.py  consultation.py  medication.py  patient.py
app/services/summarizers/: __init__.py  base.py  factory.py  llm_based.py  rule_based.py
app/services/validators/: __init__.py  clinical.py
app/utils/: __init__.py  audit.py  text.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_summarizers.py  test_utils.py  test_validators.py
